--- a/food-app/package.json
+++ b/food-app/package.json
@@ -2,7 +2,7 @@
   "name": "food-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:4000",
+  "proxy": "http://localhost:4000",
   "homepage":".",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
